Fix invisible sound bar (#582)
Closes #569.

--- a/Discreet-Flat/files/Discreet-Flat/cinnamon/cinnamon.css
+++ b/Discreet-Flat/files/Discreet-Flat/cinnamon/cinnamon.css
@@ -1156,6 +1156,11 @@ StScrollBar StButton#hhandle:hover {
 .osd-window .level {
   height: 0.7em;
   background-color: rgba(190,190,190,0.2);
+  border-radius: 1px;
+}
+.osd-window .level .level-bar {
+  background-color: #e0e0e0;
+  border-radius: 1px;
 }
 .tile-preview,
 .tile-hud {
